[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Enemies/enemyKamikaze.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/Explosion/explosion.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/kamikaze/enemy_kamikaze1.png" type="Texture" id=3]
[ext_resource path="res://Sound/Enemies/explosion.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sprites/Enemies/kamikaze/enemy_kamikaze5.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/kamikaze/enemy_kamikaze3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/kamikaze/enemy_kamikaze0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemies/kamikaze/enemy_kamikaze2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemies/kamikaze/enemy_kamikaze6.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemies/kamikaze/enemy_kamikaze4.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Normal",
"speed": 1.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 9 ) ],
"loop": false,
"name": "Chasing",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48.6372, 72 )

[node name="enemyKamikaze" type="KinematicBody2D"]
rotation = 1.5708
z_index = 10
collision_layer = 16
collision_mask = 9
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="enemy" type="AnimatedSprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "Normal"
playing = true

[node name="movementTimer" type="Timer" parent="."]
one_shot = true

[node name="attackTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="homingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
rotation = -1.5708
scale = Vector2( 0.39, 0.39 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 0.4, 0.4 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
